--- a/dot_config/zsh/alias.zsh.tmpl
+++ b/dot_config/zsh/alias.zsh.tmpl
@@ -10,11 +10,11 @@ alias sys='systemctl'
 alias che=chezmoi
 alias cz=chezmoi
 alias czcd="cd $(chezmoi source-path)"
+{{- if eq .chezmoi.os "darwin" }}
 
-{{ if eq .chezmoi.os "darwin" }}
 # macos LS_COLORS
 command gls &> /dev/null && \
     alias ls="gls --color"
 [[ -x "/Applications/Tailscale.app/Contents/MacOS/Tailscale" ]] \
     && alias tailscale="/Applications/Tailscale.app/Contents/MacOS/Tailscale"
-{{ end }}
+{{- end }}
