--- a/.chezmoiscripts/run_onchange_after-link-pwsh.ps1.tmpl
+++ b/.chezmoiscripts/run_onchange_after-link-pwsh.ps1.tmpl
@@ -7,7 +7,7 @@ if ($PSVersionTable.PSVersion.Major -lt 7) {
     exit 1
 }
 
-$sourceProfile = [System.IO.Path]::GetFullPath("$Env:USERPROFILE\.config\pwsh\profile.ps1")
+$sourceProfile = [System.IO.Path]::GetFullPath("$Env:USERPROFILE\.winconf\pwsh\profile.ps1")
 $targetProfile = [System.IO.Path]::GetFullPath("$Env:USERPROFILE\Documents\PowerShell\profile.ps1")
 
 if (!(Test-Path $sourceProfile)) {
