--- a/dot_config/rg/ripgreprc.tmpl
+++ b/dot_config/rg/ripgreprc.tmpl
@@ -1,6 +1,6 @@
 {{- if eq .chezmoi.os "darwin" }}
 --ignore-file=/Users/{{ .chezmoi.username }}/.config/fd/ignore
-{{ else if eq .chezmoi.os "linux" }}
+{{- else if eq .chezmoi.os "linux" }}
 --ignore-file=/home/{{ .chezmoi.username }}/.config/fd/ignore
 {{- else }}
 {{- end }}
