--- a/.chezmoitemplates/nvim-init-lua.tmpl
+++ b/.chezmoitemplates/nvim-init-lua.tmpl
@@ -201,7 +201,7 @@ require("lazy").setup(
                 -- Keep existing quick access
                 {"<C-p>", "<cmd>FzfLua files<cr>", desc = "Find files"},
                 {"<C-f>", "<cmd>FzfLua grep_cword<cr>", desc = "Search word under cursor"},
-                {"<C-S-p>", "<cmd>FzfLua commands<cr>", desc = "Command palette"},
+                {"<leader><C-p>", "<cmd>FzfLua commands<cr>", desc = "Command palette"},
             }
         },
         -- Gruvbox theme
