--- a/dot_config/zsh/dot_zshrc.tmpl
+++ b/dot_config/zsh/dot_zshrc.tmpl
@@ -44,7 +44,7 @@ export FZF_DEFAULT_COMMAND="fd --type file --follow --hidden"
 export FZF_CTRL_T_COMMAND="$FZF_DEFAULT_COMMAND"
 export FZF_ALT_C_COMMAND="fd --type dir --follow --hidden"
 
-export FZF_DEFAULT_OPTS='--tmux 70% --layout reverse --info=inline --pointer=">"'
+export FZF_DEFAULT_OPTS='--tmux=70% --reverse --border --pointer=">"'
 # export FZF_CTRL_T_OPTS='--preview "bat --color=always {}"'
 export FZF_ALT_C_OPTS='--preview "tree -C -a -d -L 2 {}"'
 
