--- a/.chezmoitemplates/nvim-init-lua.tmpl
+++ b/.chezmoitemplates/nvim-init-lua.tmpl
@@ -1,4 +1,5 @@
 -- chezmoi:template:left-delimiter=<{ right-delimiter=}>
+-- vim: ft=lua
 -- ===========================================
 -- Minimal Neovim Configuration
 -- ===========================================
@@ -363,6 +364,10 @@ require("lazy").setup(
                     cmp.event:on("confirm_done", cmp_autopairs.on_confirm_done())
                 end
             end
+        },
+        {
+            "powerman/vim-plugin-AnsiEsc",
+            cmd = "AnsiEsc",
         }
     },
     {
