--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -42,3 +42,12 @@ unset -f fpath_add
 # Java
 [[ -s "$HOME/.jabba/jabba.sh" ]]                && source "$HOME/.jabba/jabba.sh"
 {{- end }}
+
+{{- if eq .chezmoi.hostname "localhost" }}
+# CN-source
+export HOMEBREW_INSTALL_FROM_API=1
+export HOMEBREW_API_DOMAIN="https://mirrors.tuna.tsinghua.edu.cn/homebrew-bottles/api"
+export HOMEBREW_BOTTLE_DOMAIN="https://mirrors.tuna.tsinghua.edu.cn/homebrew-bottles"
+export HOMEBREW_BREW_GIT_REMOTE="https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/brew.git"
+export HOMEBREW_CORE_GIT_REMOTE="https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-core.git"
+{{- end }}
