--- a/dot_config/zsh/dot_zshrc.tmpl
+++ b/dot_config/zsh/dot_zshrc.tmpl
@@ -98,6 +98,8 @@ unset ZSH_COMPINIT_OPTS
 
 # FZF keybindings: must be after fzf-tab
 source <(fzf --zsh) 
+# zsh-autosuggestions keybinding:
+bindkey '^ ' autosuggest-accept # accept with ctrl-space
 
 # =============================================================
 #                       fzf-tab config
